syntax = "proto3";
package ProductPackage;

message Product{
    int32 id = 1;
    string title = 2;
    int32 price = 3;
}

message ProductId{
    int32 id = 1;
}

message ProductList{
    repeated Product products = 1;
}

message NewProduct{
    string title = 1;
    int32 price = 2;
}

message Empty{}

message Result{
    int32 status = 1;
    string message = 2;
}

service ProductService{
    rpc productList (Empty) returns (ProductList);
    rpc getProduct (ProductId) returns (Product);
    rpc createProduct (NewProduct) returns (Result);
    rpc updateProduct (Product) returns (Result);
    rpc deleteProduct (ProductId) returns (Result);
}